FIX: Ensure height changes do not apply on mobile devices

--- a/source/stylesheets/partials/index/_jumbotron.scss
+++ b/source/stylesheets/partials/index/_jumbotron.scss
@@ -2,5 +2,7 @@ body.index .welcome.jumbotron {
   background-color: #fff;
   padding: 0;
   margin: 0;
-  height: 70vh;
+  @media (min-width: $screen-sm-min) {
+    height: 70vh;
+  }
 }
