--- a/source/stylesheets/partials/index/_nav.scss
+++ b/source/stylesheets/partials/index/_nav.scss
@@ -7,5 +7,7 @@ body.index > main > .nav-list {
   background-color: $grey-bg;
   border-top: 1px solid $grey-border-color;
   padding: 4em;
-  height: 30vh;
+  @media (min-width: $screen-sm-min) {
+    height: 30vh;
+  }
 }
